# AIGODLIKE-ComfyUI-Translation

./: LocaleMap.js  MenuTranslate.js  __init__.py  main.js  pyproject.toml  readme.md
example/: Menu.json  NodeCategory.json
example/Nodes/: internal.json
ru-RU/: Menu.json  NodeCategory.json
ru-RU/Nodes/: comfy_mtb.json
